syntax = "proto3";
package userpb;
option go_package = "./userpb";

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
}
message GetUserRequest {
    string client_id = 1;
    int64 user_id = 2;
}
message GetUserResponse {
    int64 user_id = 1;
    string name = 2;
}